# api/handler/pharmacist.go
@@ -5,6 +5,7 @@ import (
 	"errors"
 	"net/http"
 	"shifolink/api/models"
+	"shifolink/pkg/check"
 	"strconv"
 
 	"github.com/gin-gonic/gin"
@@ -242,6 +243,22 @@ func (h Handler) UpdatePharmacistPassword(c *gin.Context) {
 	}
 
 	updatePharmacistPassword.ID = uid.String()
+
+	oldPassword, err := h.storage.Pharmacist().GetPassword(c, updatePharmacistPassword.ID)
+	if err != nil {
+		handleResponse(c, "error while getting password by id", http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	if oldPassword != updatePharmacistPassword.OldPassword {
+		handleResponse(c, "old password is not correct", http.StatusBadRequest, "old password is not correct")
+		return
+	}
+
+	if err = check.ValidatePassword(updatePharmacistPassword.NewPassword); err != nil {
+		handleResponse(c, "new password is weak", http.StatusBadRequest, err.Error())
+		return
+	}
 
 	if err = h.storage.Pharmacist().UpdatePassword(context.Background(), updatePharmacistPassword); err != nil {
 		handleResponse(c, "error while updating pharmacist password", http.StatusInternalServerError, err.Error())
