# api/models/customer.go
@@ -34,7 +34,6 @@ type UpdateCustomer struct {
 	FirstName string `json:"first_name"`
 	LastName  string `json:"last_name"`
 	Email     string `json:"email"`
-	Password  string `json:"password"`
 	Phone     string `json:"phone"`
 	Address   string `json:"address"`
 }
